--- a/seip2020_practical_assignments/unittesting/pom.xml
+++ b/seip2020_practical_assignments/unittesting/pom.xml
@@ -6,4 +6,13 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>unittesting</artifactId>
+  <dependencies>
+  <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version> <!-- Or whatever JUnit you're using. -->
+</dependency>
+</dependencies>
+  
+
 </project>
