add parameterized class for MyMath and TestSuite

--- a/seip2020_practical_assignments/pom.xml
+++ b/seip2020_practical_assignments/pom.xml
@@ -6,5 +6,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>gradeshistogram</module>
+  	<module>unittesting</module>
   </modules>
 </project>
