--- a/seip2020_practical_assignments/pom.xml
+++ b/seip2020_practical_assignments/pom.xml
@@ -8,6 +8,10 @@
   	<module>gradeshistogram</module>
   	<module>unittesting</module>
   </modules>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <build>
   <plugins>
   <plugin>
