--- a/seip2020_practical_assignments/pom.xml
+++ b/seip2020_practical_assignments/pom.xml
@@ -19,6 +19,18 @@
 		<artifactId>jacoco-maven-plugin</artifactId>
 		<version>0.8.2</version>
 	</plugin>
+	<plugin>
+	<groupId>org.codehaus.mojo</groupId>
+	<artifactId>cobertura-maven-plugin</artifactId>
+	<version>2.7</version>
+	<configuration>
+		<formats>
+			<format>html</format>
+			<format>xml</format>
+		</formats>
+		<check />
+	</configuration>
+</plugin>
   </plugins>
   </build>
 </project>
